--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,14 +1,14 @@
 - title: Start
   url: "/"
-  side: left
+  side: center
 
 - title: Getting Started
   url: "/getting-started/"
-  side: left
+  side: center
 
 - title: "Templates"
   url: "/design/"
-  side: left
+  side: center
   dropdown:
   - title: "Grid & Colors"
     url: "/design/grid/"
@@ -33,7 +33,7 @@
 
 - title: "Header Styles"
   url: "/headers/"
-  side: left
+  side: center
   dropdown:
   - title: "Header with Full-Width-Image"
     url: "/design/header-full-width-image/"
@@ -52,7 +52,7 @@
 
 - title: Documentation
   url: "/documentation/"
-  side: left
+  side: center
   dropdown:
   - title: "Changelog"
     url: "/changelog/"
